# BasicRandomnessAlgorithms

./: Cargo.toml  README.md
Frievalds/: frievalds.go
Lagrange Interpolation/: go.mod  hey.go  hey_test.go
Lagrange_Interpolation/: Cargo.toml
Lagrange_Interpolation/src/: LagrangeInterpolation.rs  lib.rs  main.rs
Lagrange_Interpolation/tests/: interpolation_tests.rs
RSA/: Cargo.toml
RSA/src/: lib.rs  main.rs  rings.rs
crates/commitments/: Cargo.toml
crates/commitments/src/: lib.rs  pederson.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  utils.rs
crates/fft/: Cargo.toml
crates/fft/src/: fft.rs  lib.rs  polynomial_folding.rs
crates/field/: Cargo.toml
crates/field/src/: finite_field.rs  lib.rs  ring.rs
crates/frievalds/: Cargo.toml
crates/frievalds/src/: algorithm.rs  lib.rs  matrix.rs
crates/low-degree-test/: Cargo.toml
crates/low-degree-test/src/: lib.rs  protocol.rs  test.rs
crates/multilinear/: Cargo.toml
crates/multilinear/src/: binary.rs  extension.rs  lib.rs
crates/polynomial/: Cargo.toml
crates/polynomial/src/: interpolation.rs  lib.rs  multivariate.rs  univariate.rs
crates/proof/: Cargo.toml
crates/rsa/: Cargo.toml
crates/rsa/src/: encryption.rs  key.rs  lib.rs  ring.rs  signature.rs
crates/shamir/: Cargo.toml
crates/shamir/src/: lib.rs  scheme.rs  share.rs
crates/stark/: Cargo.toml
crates/stark/src/: proofStream.rs
crates/sum-check/: Cargo.toml
crates/sum-check/src/: lib.rs  polynomial.rs  protocol.rs
examples/: shamir_demo.rs
multilinear_extension/: Cargo.toml
multilinear_extension/src/: binary.rs  main.rs
rs_encoding/: Cargo.toml
rs_encoding/src/: lib.rs  main.rs  prime_field.rs  utils.rs
shamir_secret_sharing/: Cargo.toml
shamir_secret_sharing/src/: main.rs
sum_check_protocol/: Cargo.toml
sum_check_protocol/src/: interaction.rs  lib.rs  main.rs  polynomial.rs  sum_check.rs
