[package]
name = "crypto-frievalds"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Frievalds algorithm implementation for matrix multiplication verification"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
crypto-core = { path = "../core" }
crypto-field = { path = "../field" }
rand.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
criterion = "0.5" 