[package]
name = "crypto-polynomial"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Polynomial arithmetic for cryptographic operations"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
crypto-core = { path = "../core" }
crypto-field = { path = "../field" }
rand.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
criterion = "0.5" 